@@ -6,7 +6,10 @@
 #include <swarmconfig.h>
 
 void 
-Java_swarm_SwarmEnvironment_initSwarm (JNIEnv *env, jobject obj, jobjectArray args)
+Java_swarm_SwarmEnvironment_initSwarm (JNIEnv *env,
+                                       jobject obj,
+                                       jobject jglobalZone,
+                                       jobjectArray args)
 {
   int i = 0;
   const char **argv;
@@ -25,9 +28,8 @@ Java_swarm_SwarmEnvironment_initSwarm (JNIEnv *env, jobject obj, jobjectArray ar
       utf = (const char *) (*env)->GetStringUTFChars (env, jstr, &isCopy);
       argv[i + 1] = isCopy ? (const char *) utf : strdup (utf);
     }
-  initSwarmApp (argc, argv, VERSION, "bug-swarm@santafe.edu");
-  java_directory_init (env, obj);
   defobj_init_java_call_tables ((void *) env);
- 
+  initSwarmApp (argc, argv, VERSION, "bug-swarm@santafe.edu");
+  java_directory_init (env, obj, jglobalZone);
 }
 
